--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             </div>
                         </li>
                     </ul>
-                    <a class="tepadan-3-link tepa-link" href="#buyurma*berish">Buyurtma berish</a>
+                    <a class="tepadan-3-link tepa-link" href="#buyurma-berish">Buyurtma berish</a>
                 </div>
             </div>
         </section>
