--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section>
             <div class="container">
                 <div class="eng-tepa-qism">
-                    <h2>Pixer</h2>
+                    <img src="./img/pixer.png" alt="">
                     <ul>
                         <li><a href="#">Bosh sahifa</a></li>
                         <li><a href="#">Xizmatlar</a></li>
@@ -139,6 +139,7 @@
                         <input type="tel" placeholder="Telefon raqamingiz" required>
                         <select name="buyurtma-beish">
                             <optgroup>
+                                <option selected value="#">Xizmat turi</option>
                                 <option disable select value="web-dasturlash">web-dasturlash</option>
                                 <option value="smm">SMM</option>
                                 <option value="Telegram-bot">Telegram bot</option>
