--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <section>
+        <section class="nav-qisim">
             <div class="container">
                 <div class="eng-tepa-qism">
                     <img src="./img/pixer.png" alt="">
@@ -25,6 +25,10 @@
                     </ul>
                     <a class="menu" href="#">Menu</a>
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
                 <div class="tepa-orta">
                     <div>
                         <a href="you-tube.com"><img src="./img/you-tube-img.png" alt=""></a>
@@ -36,7 +40,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>          
         <!-- section tugatildi -->
         <section>
             <div class="container">
